# gnome-health

./: .gitignore  README.md  com.codingsimply.gnome.health.json  gnome-health.py  meson.build  snapcraft.yaml
data/: com.codingsimply.gnome.health.appdata.xml.in  com.codingsimply.gnome.health.gschema.xml  meson.build
po/: POTFILES
src/: gnome-health.gresource  gnome-health.gresource.xml  gnome-health.in  main.py  main_qt.py  meson.build  window.py  window.ui
src/data/model/: Gender.py  Me.py  Record.py  RecordGroup.py  Types.py  consts.py
src/data/repository/: MeSqliteRepository.py  RecordsAppleHealthXmlRepository.py  RecordsSqliteRepository.py
src/data/service/: GroupingService.py  ImportService.py  RecordsDBusService.py
src/resources/: add_dialog.ui  gnome-health.gresource  gnome-health.gresource.xml  health_type_template_row.ui  import_dialog.ui  window.ui
src/ui/controller/: AddDialogController.py  HealthTypeTemplateRow.py  ImportDialogController.py  MainController.py
src/utility/: DbSession.py
tests/: TestMe.py  TestRecord.py  TestRecordsAppleHealthXmlRepository.py  __main__.py
tests/data/model/: test_record.py
tests/data/repository/: test_meSqliteRepository.py  test_recordsAppleHealthXmlRepository.py  test_recordsSqliteRepository.py
tests/data/service/: test_groupingService.py  test_importService.py
