pkgdatadir = join_paths(get_option('prefix'), get_option('datadir'), meson.project_name())
moduledir = join_paths(pkgdatadir, 'gnome_health')
gnome = import('gnome')

gnome.compile_resources('gnome-health',
  'gnome-health.gresource.xml',
  gresource_bundle: true,
  install: true,
  install_dir: pkgdatadir,
)

python3 = import('python3')

conf = configuration_data()
conf.set('PYTHON', python3.find_python().path())
conf.set('VERSION', meson.project_version())
conf.set('localedir', join_paths(get_option('prefix'), get_option('localedir')))
conf.set('pkgdatadir', pkgdatadir)

configure_file(
  input: 'gnome-health.in',
  output: 'gnome-health',
  configuration: conf,
  install: true,
  install_dir: get_option('bindir')
)

gnome_health_sources = [
  '__init__.py',
  'main.py',
  'window.py',
]

install_data(gnome_health_sources, install_dir: moduledir)
